@@ -38,6 +38,10 @@
 <p>2018-03-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/bmp.c (ReadBMPImage): Assure that start position always
+advances to avoid looping BMPs.  Fixes oss-fuzz 7045
+&quot;graphicsmagick/coder_BMP_fuzzer: Timeout in
+graphicsmagick_coder_BMP_fuzzer&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/pict.c (DecodeImage): Verify that sufficient backing data
 exists before allocating memory to read it.  Fixes oss-fuzz 6629
 &quot;graphicsmagick/coder_PCT_fuzzer: Out-of-memory in
